--- a/style.css
+++ b/style.css
@@ -200,7 +200,7 @@ p {
 
 /* Hero Section */
 #hero {
-	background-image: url(./img/Madamada.jpg);
+	background-image: url(Madamada.jpg);
 	background-size: cover;
 	background-position: top center;
 	position: relative;
